# aws-serverless-dockerfile-generator

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  coverage.xml  lambda_function.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tests.py  tox.ini
dockerfilegenerator/: __init__.py  generator.py  lambda_function.py
dockerfilegenerator/lib/: constants.py  exceptions.py  github.py  jsonstore.py  s3store.py  versions.py
src/: constants.py  github.py  jsonstore.py  versions.py
terraform/: lambda.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/scripts/: setup_lambda_package.sh
tests/: constants.py  generator_test.py  github_test.py  jsonstore_test.py  localpaths.py  mocks.py  s3store_test.py  tests.py  version_test.py
