[metadata]
name = 'dockerfilegenerator'
version = '0.0.1'
description = ''
author = 'Catalin Ioan Curcanu'
author_email = 'catalin.curcanu@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/dockerfilegenerator'

[requires]
python_version = ['3.6']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
